--- a/templates/RealTimeDataOverviewTemp.html
+++ b/templates/RealTimeDataOverviewTemp.html
@@ -4,10 +4,17 @@
 {% extends 'layout.html' %} {# inherits format from layout.html #}
 
 {% block title %} {# Overides layout.html default title #}
+
+
+
+
+
+
     <title>Current Data - {{ server.ServerName }}</title> {# Title - shown in tab on browser #}
 {% endblock title %}
 
 {% block content %}
+
 
     <div class="row mt-3 text-center"> {# Page header #}
         <div class="col-12 ml-auto p-3 mb-2 bg-secondary text-white">
@@ -18,7 +25,7 @@
     <div class="mt-3 text-center"> {# Home button & Rack & Server Names #}
         <div class="row card-body border border-dark font-weight-bold">
             <div class="text-left">
-                <a class="btn btn-secondary btn-lg"  href="/" role="button">Home</a>
+                <a class="btn btn-secondary btn-lg" href="/" role="button">Home</a>
             </div>
             <div class="col-10">
                 <h2 class="text-center">Rack: {{ rack.Name }} | Server: {{ server.ServerName }}</h2>
@@ -111,8 +118,8 @@
     <div class="row mt-3 text-center"> {# Services Table #}
         <div class="col-lg-12 ml-auto">
 
-            <table class="table table-bordered table-striped">
-                <thead class="table-dark">
+            <table id="service" class="display">
+                <thead>
                 <tr>
                     <th scope="col">Service ID</th>
                     <th scope="col">Service Name</th>
@@ -124,26 +131,27 @@
 
                 {% for service in service %} {# Gets all services for this server #}
                     <tr>
-                        <th scope="row">{{ service.ServiceId }}</th>
-                        <th scope="row">{{ service.ServiceName }}</th>
+                        <td scope="row">{{ service.ServiceId }}</td>
+                        <td scope="row">{{ service.ServiceName }}</td>
                         <td>{{ service.Status }}</td>
                     </tr>
                 {% endfor %}
 
                 </tbody>
             </table>
+
         </div>
     </div>
 
     <div class="row mt-3 text-center"> {# Database Table #}
         <div class="col-lg-12 ml-auto">
             {% if database != 0 %}
-                <table class="table table-bordered table-striped">
-                    <thead class="table-dark">
+                <table id="database" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Database ID</th>
-                        <th scope="col">Database Name</th>
-                        <th scope="col">Status</th>
+                        <th>Database ID</th>
+                        <th>Database Name</th>
+                        <th>Status</th>
                     </tr>
                     </thead>
 
@@ -151,8 +159,8 @@
 
                     {% for db in database %} {# Gets all databases for this server #}
                         <tr>
-                            <th scope="row">{{ db.DatabaseId }}</th>
-                            <th scope="row">{{ db.DatabaseName }}</th>
+                            <th>{{ db.DatabaseId }}</th>
+                            <th>{{ db.DatabaseName }}</th>
                             <td>{{ db.Status }}</td>
                         </tr>
                     {% endfor %}
@@ -165,12 +173,12 @@
     <div class="row mt-3 text-center"> {# Running Job Table #}
         <div class="col-lg-12 ml-auto">
             {% if runningjob != 0 %}
-                <table class="table table-bordered table-striped">
-                    <thead class="table-dark">
+                <table id="jobs" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Job Name</th>
-                        <th scope="col">User</th>
-                        <th scope="col">Remaining Time</th>
+                        <th>Job Name</th>
+                        <th>User</th>
+                        <th>Remaining Time</th>
                     </tr>
                     </thead>
 
@@ -178,16 +186,18 @@
 
                     {% for rj in runningjob %} {# Gets all databases for this server #}
                         <tr>
-                            <th scope="row">{{ rj.JobName }}</th>
-                            <th scope="row">{{ rj.User }}</th>
+                            <th>{{ rj.JobName }}</th>
+                            <th>{{ rj.User }}</th>
                             <td>{{ rj.ReservedTime }}</td>
                         </tr>
                     {% endfor %}
 
                     </tbody>
                 </table>
-            {%  endif %}
+            {% endif %}
         </div>
     </div>
+
+
 
 {% endblock content %}
