--- a/templates/Usage-Disk.html
+++ b/templates/Usage-Disk.html
@@ -131,19 +131,19 @@
     {% if lo == 'xxx' %}
         <div class="row"> {# Disk Usage table #}
             <div class="col mt-5 mb-5">
-                <table class="table table-striped table-bordered">
-                    <thead class="table-dark">
+                <table id="usage" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Date/Time</th>
-                        <th scope="col">Total</th>
-                        <th scope="col">Disk A (%): Hi-Avg-Low</th>
-                        <th scope="col">Disk B (%): Hi-Avg-Low</th>
-                        <th scope="col">Disk C (%): Hi-Avg-Low</th>
-                        <th scope="col">Disk D (%): Hi-Avg-Low</th>
+                        <th>Date/Time</th>
+                        <th>Total</th>
+                        <th>Disk A (%): Hi-Avg-Low</th>
+                        <th>Disk B (%): Hi-Avg-Low</th>
+                        <th>Disk C (%): Hi-Avg-Low</th>
+                        <th>Disk D (%): Hi-Avg-Low</th>
                     </tr>
                     </thead>
                     <tbody>
-                        {% for date, u, a, b, c, d in zip(date, usage, aUsage, bUsage, cUsage, dUsage) %}
+                    {% for date, u, a, b, c, d in zip(date, usage, aUsage, bUsage, cUsage, dUsage) %}
                             <tr>
                                 <td>{{ date }}</td>
                                 <td>{{ u }}%</td>
@@ -162,13 +162,13 @@
     {% else %}
         <div class="row"> {# CPU Usage table #}
             <div class="col mt-5 mb-5">
-                <table class="table table-bordered">
-                    <thead class="table-dark">
+                <table id="usage" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Date</th>
-                        <th scope="col">High</th>
-                        <th scope="col">Average</th>
-                        <th scope="col">Low</th>
+                        <th>Date</th>
+                        <th>High</th>
+                        <th>Average</th>
+                        <th>Low</th>
 
                     </tr>
                     </thead>
