--- a/templates/Usage-Ping.html
+++ b/templates/Usage-Ping.html
@@ -132,11 +132,11 @@
     {% if lo == 'xxx' %}
         <div class="row"> {# ping Usage table #}
             <div class="col mt-5 mb-5">
-                <table class="table table-striped table-bordered">
-                    <thead class="table-dark">
+                <table id="usage" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Date/Time</th>
-                        <th scope="col">Ping (%):</th>
+                        <th>Date/Time</th>
+                        <th>Ping (%):</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -153,13 +153,13 @@
     {% else %}
         <div class="row"> {# CPU Usage table #}
             <div class="col mt-5 mb-5">
-                <table class="table table-bordered">
-                    <thead class="table-dark">
+                <table id="usage" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Date/Time</th>
-                        <th scope="col">High</th>
-                        <th scope="col">Average</th>
-                        <th scope="col">Low</th>
+                        <th>Date/Time</th>
+                        <th>High</th>
+                        <th>Average</th>
+                        <th>Low</th>
 
                     </tr>
                     </thead>
