--- a/templates/Usage-RAM.html
+++ b/templates/Usage-RAM.html
@@ -130,11 +130,11 @@
     {% if lo == 'xxx' %}
         <div class="row"> {# Ram Usage table #}
             <div class="col mt-5 mb-5">
-                <table class="table table-striped table-bordered">
-                    <thead class="table-dark">
+                <table id="usage" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Date/Time</th>
-                        <th scope="col">RAM Usage (%):</th>
+                        <th>Date/Time</th>
+                        <th>RAM Usage (%):</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -151,13 +151,13 @@
     {% else %}
         <div class="row"> {# CPU Usage table #}
             <div class="col mt-5 mb-5">
-                <table class="table table-bordered">
-                    <thead class="table-dark">
+                <table id="usage" class="display">
+                    <thead>
                     <tr>
-                        <th scope="col">Date/Time</th>
-                        <th scope="col">High</th>
-                        <th scope="col">Average</th>
-                        <th scope="col">Low</th>
+                        <th>Date/Time</th>
+                        <th>High</th>
+                        <th>Average</th>
+                        <th>Low</th>
 
                     </tr>
                     </thead>
